Changed landingpage to db use cases

--- a/index.html
+++ b/index.html
@@ -12,73 +12,28 @@
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body class="landing">
 		<div id="page-wrapper">
-
-
-
-			<!-- Header -->
-				<!-- <header id="header" class="alt">
-					<h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#" class="icon fa-angle-down">Layouts</a>
-								<ul>
-									<li><a href="generic.html">Generic</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="#" class="button">Sign Up</a></li>
-						</ul>
-					</nav>
-				</header> -->
-
-			<!-- Banner -->
-
 				<section id="banner">
 					<h2>understand.ai</h2>
 					<p>We <span class="element"></span> your data</p>
-					<!-- <p>we make your data useful</p> -->
 					<ul class="actions">
-						<!-- Trigger the modal with a button -->
-<!-- <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button> -->
- 						<!-- <li><a href="#" class="button special lightbox-61724662942359" data-toggle="modal" data-target="#myModal">Request free demo</a></li> -->
 						<li><a id="demo-request" href="#" class="button special" data-toggle="modal" data-target="#myModal">Request free demo</a></li>
-						<!-- <li><a href="#" class="button">Learn More</a></li> -->
 					</ul>
 				</section>
 
-
-
 			<!-- Main -->
 				<section id="main" class="container">
-
 					<section class="box special">
 						<header class="major">
-							<h2>Get the best out of your algorithms
+							<h2>Get the best out of your sensors
 							<br />
-							with high quality data annotation</h2>
-							<!-- From data to insights. -->
-							<!-- <p>Give us your raw unlabeled data<br />
-							we structure, annotate, tag and categorize your data.</p> -->
-							<p>Let's be honest. You just want to run your fancy machine learning algorithms, right?<br />
-							 But there is this huge amount of unlabeled data which stands in your way.<br />
-						  We got you covered: we structure, annotate, tag and categorize your data tailored to your needs. </p>
+							with deep learning</h2>
+							<p>Data can be anything from video images to IoT sensor data.<br />
+							 With our deep learning models we analyze and find patterns in your data.<br />
+						  That way we can automatically tag images or video sequences, predict sensor failure and notify you in advance. </p>
 						</header>
 
 					</section>
@@ -87,23 +42,23 @@
 						<p> Eric Schmidt, Google, about the perfect future company </p>
 					</section>
 					<section class="box special features">
-						<h2>Get your labeled data in 3 steps:</h2>
+						<h2>Get your analyzed data in 3 steps:</h2>
 						<br/>
 						<div class="row">
 						  <div class="col-md-4">
 								<span class="icon major accent2"><h2>1</h2></span>
-								<h3>Send us your data</h3>
+								<h3>Send or stream us your data</h3>
 								<p>Upload your data to our servers using a secure connection. At any time we guarantee data security and confidentiality.</p>
 							</div>
 							<div class="col-md-4">
 								<span class="icon major accent5"><h2>2</h2></span>
-								<h3>We understand your data</h3>
-								<p>By combining customized Machine Learning methods and human classification, we understand, classify and label your data.</p>
+								<h3>Your data gets analyzed</h3>
+								<p>Our customized Machine Learning models detect patterns in the data (e.g. recogntion of specific actions in a video).</p>
 							</div>
 							<div class="col-md-4">
 								<span class="icon major accent3"><h2>3</h2></span>
 								<h3>Get your labeled data</h3>
-								<p>Now you can download your labeled and structured data and get started working on your actual project. It's that simple.</p>
+								<p>Receive the results like a tag what happened in the video or notifications about future sensor failure. And all that in a matter of seconds.</p>
 							</div>
 						</div>
 <span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
@@ -114,19 +69,19 @@
 							<section>
 								<span class="icon major fa-bolt accent2"></span>
 								<h3>Fast</h3>
-								<p>Speed makes the difference. Don't wait until your interns finish their labeling work. Our qualified crowd delivers you results at highspeed.</p>
+								<p>Speed makes the difference. Don't wait until your security guard comes back from his coffee break and looks at the monitor.</p>
 							</section>
 							<section>
 								<span class="icon major fa-area-chart accent3"></span>
-								<h3>Reliable</h3>
-								<p>Quality is key! Don't spend hours of reviewing your labeled data. With our machine learning powered quality layer we make sure you get only the best and double checked results.</p>
+								<h3>Automatic</h3>
+								<p>After an initial training phase our self learning algorithms adopt to your problem automatically.</p>
 							</section>
 						</div>
 						<div class="features-row">
 							<section>
 								<span class="icon major fa-cloud accent4"></span>
 								<h3>Cost effective</h3>
-								<p>Combining our machine learning algorithms with our crowd gives you the most cost effective way to label your data.</p>
+								<p>Monitoring millions of sensors or cameras can be expensive. With our algorithms you keep track of all of them at low cost.</p>
 							</section>
 							<section>
 								<span class="icon major fa-lock accent5"></span>
@@ -138,38 +93,47 @@
 
 					<div class="row">
 						<div class="6u 12u(narrower)">
+							<section class="box special">
+								<span class="image featured"><img src="images/graffiti.jpg" alt="" /></span>
+								<h3>Use case: Action recogntion</h3>
+								<p>Detecting actions in video sequences can be crucial if it is a medical emergency or a crime like graffiti spraying or other vandalism happening right in front of the camera.</p>
+							</section>
+						</div>
+						<div class="6u 12u(narrower)">
+							<section class="box special">
+								<span class="image featured"><img src="images/server.jpg" alt="" /></span>
+								<h3>Use case: Reducing power consumption</h3>
+								<p>Power consumption is a huge issue for our planet. With analyzing all the available sensor information you are able to detect potential for saving power in you system.</p>
+							</section>
+						</div>
+					</div>
+					<div class="row">
+						<div class="6u 12u(narrower)">
 
 							<section class="box special">
-								<span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
-								<h3>Use case: Autonomous driving</h3>
-								<p>With the help of understand.ai an autonomous driving company can label the video and images which were recorded while driving. This groundtruth is the base for training a passenger or lane detection algorithm.</p>
-								<!-- <ul class="actions">
-									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul> -->
+								<span class="image featured"><img src="images/fashion2.jpg" alt="" /></span>
+								<h3>Use case: Image tagging</h3>
+								<p>For one of our customers we built a model which can automatically detect what kind of material is on the picture. This algorithm is so generic that it can be trained to recognize other never seen classes (e.g. fruits) with very little additional training.</p>
 							</section>
 
 						</div>
 						<div class="6u 12u(narrower)">
 
 							<section class="box special">
-								<span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
-								<h3>Use case: Medicine</h3>
-								<p>In computer assisted surgery it's important to detect the surgery tools in the images. With understand.ai it is easy to get hundred thousands of labeled images where the tool is clearly marked.</p>
-								<!-- <ul class="actions">
-									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul> -->
+								<span class="image featured"><img src="images/obama.jpg" alt="" /></span>
+								<h3>Use case: Detecting faces in videos</h3>
+								<p>Another algorithm of us was able to learn to detect faces in videos with only a few examples shown. This could be useful for automatic tagging of a video or describing the content of a video for blind people.</p>
 							</section>
 
 						</div>
 					</div>
-
 				</section>
 
 			<!-- CTA -->
 				<section id="cta">
 
 					<h2>Get in contact now</h2>
-					<p>Concentrate on what you can do best and let us annotate your data.</p>
+					<p>Concentrate on what you can do best and let us analyze your data.</p>
 					<br />
 					<form>
 						<div class="row uniform 50%">
@@ -198,7 +162,8 @@
 						<!-- <li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li> -->
 					</ul>
 					<ul class="copyright">
-						<li>&copy; understand.ai. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; understand.ai. All rights reserved.</li>
+						<!-- <li><a href="./imprint.html">Imprint</a></li> -->
 					</ul>
 				</footer>
 
@@ -227,7 +192,7 @@
 			<script>
 					$(function(){
 							$(".element").typed({
-									strings: ["classify", "tag", "annotate", "label", "identify", "caption", "rate", "parse"],
+									strings: ["classify", "tag", "recognize", "label", "identify", "caption", "rate", "parse"],
 									typeSpeed: 0,
 									loop: true,
 							});
@@ -241,29 +206,9 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <!-- <h4 class="modal-title">Give us a taste of your data</h4> -->
       </div>
       <div class="modal-body">
 				<script type="text/javascript" src="https://form.jotformeu.com/jsform/61724662942359"></script>
-        <!-- <p>Upload a sample of your data and get it labeled for free. Max 100 images or 100 csv rows.</p>
-				<form action="https://getsimpleform.com/messages?form_api_token=acd9ad0f4fa3cdb323880aaac1beef11" method="post">
-					<!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
-					<!-- <input type='hidden' name='redirect_to' value='https://0rland0.github.com/uploaded.html' />
-					<!-- all your input fields here.... -->
-					<!-- <label>Sample data if available (CSV, zip, ...)</label>
-					<input type="file" name="sample-data" class="form-control">
-					<label>How should the result look like?</label>
-					<input type='text' name='task-description' placeholder='E.g. each image should be labeled as cat or dog' />
-					<label>Your name?</label>
-					<input type='text' name='name' placeholder='e.g. John Doe'/>
-					<label>Company Name</label>
-					<input type='text' name='company-name' placeholder='e.g. Willy Wonka Inc.'/>
-					<label>Phone number</label>
-					<input type='text' name='phone-number' placeholder='e.g. +49 176 41648137' />
-					<label>Email</label>
-					<input type='text' name='email' placeholder='e.g. foo@bar.com'/>
-					<input type='submit' value='Submit' />
-				</form> -->
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
