--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 	</head>
 	<body class="landing">
 		<div id="page-wrapper">
+			<header id="header">
+				<!-- <h1><a href="index.html">Alpha</a> by HTML5 UP</h1> -->
+				<nav id="nav">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About</a></li>
+					</ul>
+				</nav>
+			</header>
+
 				<section id="banner">
 					<h2>understand.ai</h2>
 					<p>We <span class="element"></span> your data</p>
@@ -162,8 +172,9 @@
 						<!-- <li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li> -->
 					</ul>
 					<ul class="copyright">
+						<li><a href="./about.html">About</a></li>
+						<li><a href="./imprint.html">Imprint</a></li>
 						<li>&copy; understand.ai. All rights reserved.</li>
-						<!-- <li><a href="./imprint.html">Imprint</a></li> -->
 					</ul>
 				</footer>
 
