--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<h2>understand.ai</h2>
 					<p>We <span class="element"></span> your data</p>
 					<ul class="actions">
-						<li><a id="demo-request" href="#" class="button special" data-toggle="modal" data-target="#myModal">Request free demo</a></li>
+						<li><a id="demo-request" href="#" class="button special" data-toggle="modal" data-target="#myModal">Contact us now</a></li>
 					</ul>
 				</section>
 
