Added bold styling for header elemnts in imprint

--- a/imprint.html
+++ b/imprint.html
@@ -35,7 +35,7 @@
 			<header>
 				<h2>Terms and conditions of use</h2>
 				<div>
-					<p><br />1. Introduction</p>
+					<p>1. Introduction</p>
 					<ul>
 						<li>1.1 These terms and conditions shall govern your use of our website and mobile application.</li>
 						<li>1.2 By using our website or by downloading our mobile application, you accept these terms and conditions in full; accordingly, if you disagree with these terms and conditions or any part of these terms and conditions, you must not use our website
