--- a/imprint.html
+++ b/imprint.html
@@ -59,7 +59,12 @@
 
 <p>Copyright</p>
 
-<ul><li>Understand.ai’s web pages and their contents are subject to German copyright law. Unless expressly permitted by law (&sect; 44a et seq. of German copyright law), every form of utilizing, reproducing or processing works subject to copyright protection on our website requires the prior consent of the respective owner of the rights. Individual reproductions of a work are allowed only for private use, so must not serve either directly or indirectly for earnings. Unauthorized utilization of copyrighted works is punishable (&sect; 106 of German copyright law).</li></ul>
+<ul><li>Understand.ai’s web pages and their contents are subject to German copyright law. Unless expressly permitted by law (&sect; 44a et seq. of German copyright law), every form of utilizing, reproducing or processing works subject to copyright protection on our website requires the prior consent of the respective owner of the rights. Individual reproductions of a work are allowed only for private use, so must not serve either directly or indirectly for earnings. Unauthorized utilization of copyrighted works is punishable (&sect; 106 of German copyright law).</li>
+<p>Sources of images and graphics</p>
+<li>Visualhunt (Businessman wearing bow tie and suspenders)</li>
+<li>Unsplash</li>
+<li>Pexels</li>
+</ul>
 
 <div>
 	<h2>Google Analytics</h2>
