Added contact section to header and footer

--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">About</a></li>
+							<li><a href="mailto:info@understand.ai">Contact</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -62,6 +63,7 @@ We apply deep neural networks combined with fine human annotations to build mode
 				</ul>
 				<ul class="copyright">
 					<li><a href="./about.html">About</a></li>
+					<li><a href="mailto:info@understand.ai">Contact</a></li>
 					<li><a href="./imprint.html">Imprint</a></li>
 					<li>&copy; understand.ai. All rights reserved.</li>
 				</ul>
