--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
+						<li><a href="mailto:info@understand.ai">Contact</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -157,6 +158,7 @@
 					</ul>
 					<ul class="copyright">
 						<li><a href="./about.html">About</a></li>
+						<li><a href="mailto:info@understand.ai">Contact</a></li>
 						<li><a href="./imprint.html">Imprint</a></li>
 						<li>&copy; understand.ai. All rights reserved.</li>
 					</ul>
