Added usage rights and links to some images in the imprint

--- a/imprint.html
+++ b/imprint.html
@@ -59,11 +59,15 @@
 
 <p>Copyright</p>
 
-<ul><li>Understand.ai’s web pages and their contents are subject to German copyright law. Unless expressly permitted by law (&sect; 44a et seq. of German copyright law), every form of utilizing, reproducing or processing works subject to copyright protection on our website requires the prior consent of the respective owner of the rights. Individual reproductions of a work are allowed only for private use, so must not serve either directly or indirectly for earnings. Unauthorized utilization of copyrighted works is punishable (&sect; 106 of German copyright law).</li>
-<p>Sources of images and graphics</p>
-<li>Visualhunt</li>
-<li>Unsplash</li>
-<li>Pexels</li>
+<ul>
+	<li>Understand.ai’s web pages and their contents are subject to German copyright law. Unless expressly permitted by law (&sect; 44a et seq. of German copyright law), every form of utilizing, reproducing or processing works subject to copyright protection on our website requires the prior consent of the respective owner of the rights. Individual reproductions of a work are allowed only for private use, so must not serve either directly or indirectly for earnings. Unauthorized utilization of copyrighted works is punishable (&sect; 106 of German copyright law).</li>
+	<p>Sources of images and graphics</p>
+	<li>Visualhunt</li>
+	<li>Unsplash</li>
+	<li>Pexels</li>
+	<li> Server Image By Florian Hirzinger - www.fh-ap.com - Own work (Florian Hirzinger), CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=6212692</li>
+	<li> CT Image By User:MBq - Own work, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=20682407</li>
+
 </ul>
 
 <div>
