Added new use cases and changed wording to reflect better that we are applying machine learning algorithms right now instead of anotating data

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<title>understand.ai</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="High quality data annotation to boost your machine learning algorithms.">
+		<meta name="description" content="Get unique insights about your data with our machine learning algorithms.">
 		<meta property="og:title" content="understand.ai" />
-		<meta property="og:description" content="High quality data annotation to boost your machine learning algorithms." />
+		<meta property="og:description" content="Get unique insights about your data with our machine learning algorithms." />
 		<meta property="og:image" content="images/banner.jpg" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -68,7 +68,7 @@
 							</div>
 							<div class="col-md-4">
 								<span class="icon major accent3"><h2>3</h2></span>
-								<h3>Get your labeled data</h3>
+								<h3>Get your analyzed data</h3>
 								<p>Receive the results like a tag what happened in the video or notifications about future sensor failure. And all that in a matter of seconds.</p>
 							</div>
 						</div>
@@ -80,7 +80,7 @@
 							<section>
 								<span class="icon major fa-bolt accent2"></span>
 								<h3>Fast</h3>
-								<p>Speed makes the difference. Don't wait until your security guard comes back from his coffee break and looks at the monitor.</p>
+								<p>Speed makes the difference. Listen to your sensor data and don't wait until your machines break.</p>
 							</section>
 							<section>
 								<span class="icon major fa-area-chart accent3"></span>
@@ -106,18 +106,39 @@
 						<div class="6u 12u(narrower)">
 
 							<section class="box special">
-								<span class="image featured"><img src="images/fashion2.jpg" alt="" /></span>
-								<h3>Use case: Image tagging</h3>
-								<p>For one of our customers we built a model which can automatically detect what kind of material is on the picture. This algorithm is so generic that it can be trained to recognize other never seen classes (e.g. fruits) with very little additional training.</p>
+								<span class="image featured"><img src="images/inspection.jpg" alt="" /></span>
+								<h3>Use case: Inspection and Quality Control</h3>
+								<p>A lot of the inspection and quality control work is still done manually. We can speed this process up with our visual inspection machine learning algorithms.</p>
 							</section>
 
 						</div>
 						<div class="6u 12u(narrower)">
 
 							<section class="box special">
-								<span class="image featured"><img src="images/obama.jpg" alt="" /></span>
-								<h3>Use case: Detecting faces in videos</h3>
-								<p>Another algorithm of us was able to learn to detect faces in videos with only a few examples shown. This could be useful for automatic tagging of a video or describing the content of a video for blind people.</p>
+								<span class="image featured"><img src="images/fashion2.jpg" alt="" /></span>
+								<h3>Use case: Image classification</h3>
+								<p>We can automatically detect what kind of material is on the picture. This algorithm is so generic that it can be trained to recognize other never seen classes (e.g. fruits) with very little additional training.</p>
+							</section>
+
+						</div>
+
+					</div>
+					<div class="row">
+						<div class="6u 12u(narrower)">
+
+							<section class="box special">
+								<span class="image featured"><img src="images/server.jpg" alt="" /></span>
+								<h3>Use case: Predictive Maintenance</h3>
+								<p>We analyze your sensor data to find patterns which can for example indicate future failure of machines.</p>
+							</section>
+
+						</div>
+						<div class="6u 12u(narrower)">
+
+							<section class="box special">
+								<span class="image featured"><img src="images/ct-image2.jpg" alt="" /></span>
+								<h3>Use case: Image analysis</h3>
+								<p>We analyze your medical images to detect diseases as early as possible and support the doctors in their analysis.</p>
 							</section>
 
 						</div>
@@ -140,9 +161,10 @@
 
 								<input id="demo-request" type="button" value="Request free demo" class="fit" class="button special lightbox-61724662942359" data-toggle="modal" data-target="#myModal"/>
 							</div>
+
 						</div>
 					</form>
-
+					<p> or send us an <a href="mailto:info@understand.ai">email</a>
 				</section>
 
 
