Changed use cases images to better stock images from depositophotos. Updated imprint with hint to deposito.

--- a/imprint.html
+++ b/imprint.html
@@ -66,7 +66,7 @@
 	<li>Unsplash</li>
 	<li>Pexels</li>
 	<li> Server Image By Florian Hirzinger - www.fh-ap.com - Own work (Florian Hirzinger), CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=6212692</li>
-	<li> CT Image By User:MBq - Own work, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=20682407</li>
+	<li> Inspection and CT image by depositophotos.com </li>
 
 </ul>
 
