--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 							<section class="box special">
 								<span class="image featured"><img src="images/inspection.jpg" alt="" /></span>
-								<h3>Use case: Inspection and Quality Control</h3>
+								<h3>Inspection and Quality Control</h3>
 								<p>A lot of the inspection and quality control work is still done manually. We can speed this process up with our visual inspection machine learning algorithms.</p>
 							</section>
 
@@ -115,8 +115,8 @@
 						<div class="6u 12u(narrower)">
 
 							<section class="box special">
-								<span class="image featured"><img src="images/fashion2.jpg" alt="" /></span>
-								<h3>Use case: Image classification</h3>
+								<span class="image featured"><img src="images/fashion.jpg" alt="" /></span>
+								<h3>Image classification</h3>
 								<p>We can automatically detect what kind of material is on the picture. This algorithm is so generic that it can be trained to recognize other never seen classes (e.g. fruits) with very little additional training.</p>
 							</section>
 
@@ -128,7 +128,7 @@
 
 							<section class="box special">
 								<span class="image featured"><img src="images/server.jpg" alt="" /></span>
-								<h3>Use case: Predictive Maintenance</h3>
+								<h3>Predictive Maintenance</h3>
 								<p>We analyze your sensor data to find patterns which can for example indicate future failure of machines.</p>
 							</section>
 
@@ -136,7 +136,7 @@
 						<div class="6u 12u(narrower)">
 
 							<section class="box special">
-								<span class="image featured"><img src="images/ct-image2.jpg" alt="" /></span>
+								<span class="image featured"><img src="images/medical.jpg" alt="" /></span>
 								<h3>Use case: Image analysis</h3>
 								<p>We analyze your medical images to detect diseases as early as possible and support the doctors in their analysis.</p>
 							</section>
