Removed team picture from about section.

--- a/about.html
+++ b/about.html
@@ -32,22 +32,31 @@
 We apply deep neural networks combined with fine human annotations to build models which help you understand your data better.</p>
 					</header>
 					<div class="box">
-						<span class="image featured"><img src="images/team.jpg" alt="" /></span>
-						<!-- <h3>The team</h3>
-						<p>Marc previously built Meet&Eat and was a part of the EF in London. He holds a Master of Science in Machine Learning and Entrepreneurship. If he is not tweaking his machine learning models he enjoys playing or watching chess games.</p>
-						<p>Philip previously built Pashion where he led the engineering team. After that he gained experience in various fields while working for Mercedes Research in the Silicon Valley. If he is not drawing on his whiteboard you can find him catching waves in France, Spain or Hawaii.</p> -->
+
+
 						<div class="row">
-							<div class="6u 12u(mobilep)">
-								<h3>Philip Kessler</h3>
-								<p>Philip previously built Pashion, where he led the engineering team. After that he gained experience in building scalable systems at Mercedes Research in the Silicon Valley. He is about to graduate in Computer Science at the KIT (one of Europe's leading universities), where he specialized in machine learning and backend architecture. If he is not drawing on his whiteboard you can find him catching waves in France, Spain or Hawaii.</p>
-								<p>Mail: <a href="mailto:philip.kessler@understand.ai">philip.kessler@understand.ai</a></p>
+							<div class="6u 12u(narrower)">
+
+								<section class="box special">
+									<!-- <span class="image featured img-rounded"><img src="images/philip.jpg" alt="" /></span> -->
+									<h3>Philip Kessler</h3>
+									<p>Philip previously built Pashion, where he led the engineering team. After that he gained experience in building scalable systems at Mercedes Research in the Silicon Valley. He is about to graduate in Computer Science at the KIT (one of Europe's leading universities), where he specialized in machine learning and backend architecture. If he is not drawing on his whiteboard you can find him catching waves in France, Spain or Hawaii.</p>
+									<p>Mail: <a href="mailto:orlando@understand.ai">philip.kessler@understand.ai</a></p>
+								</section>
+
 							</div>
-							<div class="6u 12u(mobilep)">
-								<h3>Marc Mengler</h3>
-								<p>Marc holds two Master degrees in computer science from the University of Mannheim and Maastricht, where he specialized in machine learning, and entrepreneurship. He is a serial entrepreneur who cofounded multiple startups where he also secured the funding. He received a scholarship for Entrepreneurs First (London), the leading deep tech accelerator in Europe. With 14 he already played against chess legend Kasparov. If he is not tweaking his machine learning models he enjoys playing or watching chess games.</p>
-								<p>Mail: <a href="mailto:marc@understand.ai">marc@understand.ai</a></p>
+							<div class="6u 12u(narrower)">
+
+								<section class="box special">
+									<!-- <span class="image featured"><img src="images/marc2.jpg" alt="" /></span> -->
+									<h3>Marc Mengler</h3>
+									<p>Marc holds two Master degrees in computer science from the University of Mannheim and Maastricht, where he specialized in machine learning and entrepreneurship. He is a serial entrepreneur who cofounded multiple startups where he also secured the funding. He received a scholarship for Entrepreneurs First (London), the leading deep tech accelerator in Europe. With 14 he already played against chess legend Kasparov. If he is not tweaking his machine learning models he enjoys playing chess games.</p>
+									<p>Mail: <a href="mailto:marc@understand.ai">marc@understand.ai</a></p>
+								</section>
+
 							</div>
 						</div>
+
 					</div>
 				</section>
 
